# folly_import

./: .gitignore  .gitpod.yml  Makefile  README.md
.github/workflows/: build.yml  container_build.yml  create_image.yml
ci/: deb_install.sh  vcpkg_install.sh
ci/container/: Dockerfile
cxx/: CMakeLists.txt  conanfile.txt
cxx/cmake/: support_libs.cmake
cxx/src/boost_ipc_obj/: b1.cpp  b2.cpp
cxx/src/folly_queue/: main.cpp
cxx/src/ipc_obj/: CMakeLists.txt  b1.cpp  b2.cpp  main.cpp
cxx/src/test/: CMakeLists.txt  main.cpp
